4_Deploy-Apps/guestbook-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
  name: guestbook
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-server
  selector:
    app: guestbook
  sessionAffinity: None
  type: NodePort
